tests/a/tests/integrity/fail/if/if.1.stderr
error: expected {root}{root}, found {root}{b,root}
 --> tests/integrity/fail/if/if.1.rs:9:13
  |
9 |         x = 6;
  |             ^
